parseInt, parseFloat, Number()

--- a/Área de Trabalho/cursos/js/B/aula05/aula06/ex02.html
+++ b/Área de Trabalho/cursos/js/B/aula05/aula06/ex02.html
@@ -17,8 +17,8 @@
     <h1>Título da aula 6</h1>
     <p>paragrafo aaaa</p>
     <script>
-         var num = window.prompt('digite um numero');
-         var num2 = window.prompt('Digite outro numero');
+         var num = Number(window.prompt('digite um numero'));
+         var num2 = Number.parseInt(window.prompt('Digite outro numero'));
          var soma = num + num2;
          window.alert('String composta ' + soma + "!");
     </script>
