template string / placeholder ecmascript

--- a/Área de Trabalho/cursos/js/B/aula05/aula06/ex02.html
+++ b/Área de Trabalho/cursos/js/B/aula05/aula06/ex02.html
@@ -21,6 +21,9 @@
          var num2 = Number.parseInt(window.prompt('Digite outro numero'));
          var soma = num + num2;
          window.alert('String composta ' + soma + "!");
+         window.alert('A soma dos valores em uma string é igual a ' + soma.toString());
+         window.alert('A soma dos valores em uma string é igual a ' + String(soma));
+         window.alert(`A soma dos valores em template é ${soma}`);
     </script>
 </body>
 </html>
