--- a/Área de Trabalho/cursos/js/B/aula05/aula06/ex03.html
+++ b/Área de Trabalho/cursos/js/B/aula05/aula06/ex03.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 3</title>
+    <style>
+        body{
+            font: normal 20pt Arial;
+        }
+        </style>
 </head>
 <body>
     <h1>Esse é o exercício 3 da aula 6</h1>
     <script>
         var nome = window.prompt("Qual é o seu nome?");
-        document.write(`Seu nome tem ${nome.length} letras no total`);
+        document.writeln(`Seu nome tem ${nome.length} letras no total<br>`);
+        document.writeln(`Nome em maiúsculo: <strong> ${nome.toUpperCase()} </strong> `);
     </script> 
 </body>
 </html>
