--- a/Área de Trabalho/cursos/js/B/aula09/ex01.html
+++ b/Área de Trabalho/cursos/js/B/aula09/ex01.html
@@ -19,9 +19,12 @@
     <div>Clique aqui</div>
 
     <script>
-        window.document.write(window.navigator.appName);
-        window.document.write(window.document.URL);
-        window.document.write(window.document.bgColor)
+        var corpo = window.document.body;
+        var p1 = window.document.getElementsByTagName('p')[1];
+        p1.style.color = 'orange';
+        corpo.style.backgroundColor = 'black';
+        document.write(p1.innerText + ', mas que não mantém o parâmetro strong<br>');
+        document.write(p1.innerHTML + ', puxando a tag ');
     </script>
 </body>
 </html>
