chamada para javascript externo

--- a/Área de Trabalho/cursos/js/D/aula13/modelo.html
+++ b/Área de Trabalho/cursos/js/D/aula13/modelo.html
@@ -8,15 +8,17 @@
     <title>Modelo de exercício</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h2>Titulo</h2>
+    </header>
 
     <section>
 
         <div>
-
+            Testando
         </div>
         <div>
-
+            Olá
         </div>
 
     </section>
@@ -24,6 +26,6 @@
     <footer>
         <p>&copy; Cortazzo 2022</p>
     </footer>
-    
+    <script src="script.js"></script>
 </body>
 </html>
